--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="http://muhammadayaz.znm@gmail.com/subscribe.php"method="get">
+    <form action="http://muhammadayaz.znm@gmail.com/subscribe.php"method="get" align="center">
         <p>tihs where the for controls will apper.</p>
 
             <p>Usename:</p>
